--- a/cart.html
+++ b/cart.html
@@ -64,20 +64,20 @@
                         <div class="card-header bg-secondary text-dark rounded-0 mb-md-0 mb-30">
                             <h4 class="text-center">您的購物車</h4>
                         </div>
-                        <div class="container p-md-30 cart-item">
+                        <div class="p-md-30 cart-item">
                             <div class="row align-items-center">
-                                <div class="col-6 col-md-2 cart-img bg-cover"
+                                <div class="col-6 col-lg-2 cart-img bg-cover"
                                     style="background-image: url(https://images.unsplash.com/photo-1473447547337-5770a453122d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
                                 </div>
                                 <div class="col-6 col-md-6">
                                     <div class="row">
-                                        <div class="col-md-6 d-flex justify-content-md-center">
+                                        <div class="col-lg-6 d-flex justify-content-lg-center">
                                             <div>
                                                 <h5 class="font-weight-bold">德國麵包</h5>
                                                 <span>NT$ 130</span>
                                             </div>
                                         </div>
-                                        <div class="col-md-6 d-flex align-items-center" style="width: 160px;">
+                                        <div class="col-lg-6 d-flex align-items-center" style="width: 160px;">
                                             <div class="input-group carts-input-group">
                                                 <div class="input-group-prepend">
                                                     <button class="btn btn-outline-primary px-3">-</button>
@@ -91,29 +91,29 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-2 h5 text-right py-3 cart-border my-3">
+                                <div class="col-lg-2 h5 text-right py-3 cart-border my-3">
                                     NT$ 260
                                 </div>
-                                <div class="col-2 d-none d-md-block text-center">
+                                <div class="col-2 d-none d-lg-block text-center">
                                     <a href="#" data-target="#removeModal" data-toggle="modal" data-title="德國麵包"><i
                                             class="fas fa-trash"></i></a>
                                 </div>
                             </div>
                         </div>
-                        <div class="container p-md-30 cart-item">
+                        <div class="p-md-30 cart-item">
                             <div class="row align-items-center">
-                                <div class="col-6 col-md-2 cart-img bg-cover"
+                                <div class="col-6 col-lg-2 cart-img bg-cover"
                                     style="background-image: url(https://images.unsplash.com/photo-1568471173242-461f0a730452?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=730&q=80);">
                                 </div>
                                 <div class="col-6 col-md-6">
                                     <div class="row">
-                                        <div class="col-md-6 d-flex justify-content-md-center">
+                                        <div class="col-lg-6 d-flex justify-content-lg-center">
                                             <div>
                                                 <h5 class="font-weight-bold">法國麵包</h5>
                                                 <span>NT$ 130</span>
                                             </div>
                                         </div>
-                                        <div class="col-md-6 d-flex align-items-center" style="width: 160px;">
+                                        <div class="col-lg-6 d-flex align-items-center" style="width: 160px;">
                                             <div class="input-group carts-input-group">
                                                 <div class="input-group-prepend">
                                                     <button class="btn btn-outline-primary px-3">-</button>
@@ -127,10 +127,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-2 h5 text-right py-3 cart-border my-3">
+                                <div class="col-lg-2 h5 text-right py-3 cart-border my-3">
                                     NT$ 260
                                 </div>
-                                <div class="col-2 d-none d-md-block text-center">
+                                <div class="col-2 d-none d-lg-block text-center">
                                     <a href="#" data-target="#removeModal" data-toggle="modal" data-title="法國麵包"><i
                                             class="remove-icon fas fa-trash"></i></a>
                                 </div>
