--- a/product.html
+++ b/product.html
@@ -88,9 +88,9 @@
                         <div class="row">
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1549931319-a545dcf3bc73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1549931319-a545dcf3bc73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
+                                    </div>
                                     <div class="item-tag py-3 px-2 text-white">本日精選</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -110,9 +110,9 @@
 
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1568471173242-461f0a730452?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=730&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1568471173242-461f0a730452?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=730&q=80);">
+                                    </div>
                                     <div class="item-tag py-3 px-2 text-white">本日精選</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -132,9 +132,9 @@
 
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1473447547337-5770a453122d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1473447547337-5770a453122d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
+                                    </div>
                                     <div class="item-tag py-3 px-2 text-white">本日精選</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -153,9 +153,9 @@
                             </div>
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1573119450857-c174735b7941?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1573119450857-c174735b7941?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80);">
+                                    </div>
                                     <div class="item-tag-hot py-3 px-2 text-white">人氣推薦</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -175,9 +175,9 @@
 
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1558745010-d2a3c21762ab?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1558745010-d2a3c21762ab?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80);">
+                                    </div>
                                     <div class="item-tag-hot py-3 px-2 text-white">人氣推薦</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -196,9 +196,9 @@
                             </div>
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1535225192997-f901a0de048d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1535225192997-f901a0de048d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
+                                    </div>
                                     <div class="item-tag-hot py-3 px-2 text-white">人氣推薦</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -221,9 +221,9 @@
                         <div class="row">
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1549931319-a545dcf3bc73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1549931319-a545dcf3bc73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
+                                    </div>
                                     <div class="item-tag py-3 px-2 text-white">本日精選</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -243,9 +243,9 @@
 
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1568471173242-461f0a730452?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=730&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1568471173242-461f0a730452?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=730&q=80);">
+                                    </div>
                                     <div class="item-tag py-3 px-2 text-white">本日精選</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -264,9 +264,9 @@
                             </div>
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1473447547337-5770a453122d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1473447547337-5770a453122d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
+                                    </div>
                                     <div class="item-tag py-3 px-2 text-white">本日精選</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -290,9 +290,9 @@
                         <div class="row">
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1573119450857-c174735b7941?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1573119450857-c174735b7941?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80);">
+                                    </div>
                                     <div class="item-tag-hot py-3 px-2 text-white">人氣推薦</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -312,9 +312,9 @@
 
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1558745010-d2a3c21762ab?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1558745010-d2a3c21762ab?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80);">
+                                    </div>
                                     <div class="item-tag-hot py-3 px-2 text-white">人氣推薦</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -333,9 +333,9 @@
                             </div>
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1535225192997-f901a0de048d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1535225192997-f901a0de048d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
+                                    </div>
                                     <div class="item-tag-hot py-3 px-2 text-white">人氣推薦</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -358,9 +358,9 @@
                         <div class="row">
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1559143113-d1a1049f31f0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1559143113-d1a1049f31f0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80);">
+                                    </div>
                                     <div class="item-tag-new py-3 px-2 text-white">新品上市</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -380,9 +380,9 @@
 
                             <div class="col-md-6 mb-9">
                                 <div class="item-box">
-                                    <img class="item-box-img"
-                                        src="https://images.unsplash.com/photo-1551887549-b8ab0b367850?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=659&q=80"
-                                        alt="">
+                                    <div class="item-box-img bg-cover"
+                                        style="background-image: url(https://images.unsplash.com/photo-1551887549-b8ab0b367850?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=659&q=80);">
+                                    </div>
                                     <div class="item-tag-new py-3 px-2 text-white">新品上市</div>
                                     <div class="item-favorite">
                                         <i style="font-size: 24px;" class="far-heart far fa-heart"></i>
@@ -390,14 +390,14 @@
                                     </div>
                                 </div>
                                 <div class="row no-gutters">
-                                        <div class="col-6 text-center border">
-                                            <div class="text-text-color item-box-name">蝸牛麵包</div>
-                                        </div>
-                                        <div class="col-6 text-center border border-left-0">
-                                            <div class="text-text-color item-box-name"><strong>NT$ 40</strong></div>
-                                        </div>
+                                    <div class="col-6 text-center border">
+                                        <div class="text-text-color item-box-name">蝸牛麵包</div>
                                     </div>
-                                    <a href="#" class="btn btn-primary d-block item-box-name">加入購物車</a>
+                                    <div class="col-6 text-center border border-left-0">
+                                        <div class="text-text-color item-box-name"><strong>NT$ 40</strong></div>
+                                    </div>
+                                </div>
+                                <a href="#" class="btn btn-primary d-block item-box-name">加入購物車</a>
                             </div>
                         </div>
                     </div>
@@ -417,8 +417,8 @@
             </ul>
         </nav>
     </div>
-   <!--　footer -->
-   <footer>
+    <!--　footer -->
+    <footer>
         <!-- 信箱 -->
         <div class="container-fluid bg-primary">
             <div class="container ">
@@ -463,8 +463,10 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-md-6 ">
-                        <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-facebook-square"></i></a>
-                        <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-twitter-square"></i></a>
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i
+                                class="fab fa-facebook-square"></i></a>
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i
+                                class="fab fa-twitter-square"></i></a>
                         <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-line"></i></a>
                     </div>
                     <div class="col-md-6 d-flex align-items-center justify-content-md-end text-text-color">
