--- a/cart.html
+++ b/cart.html
@@ -234,7 +234,7 @@
                     確認<span class="h5 text-danger font-weight-bold">刪除</span>該訂單嗎?
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">否</button>
+                    <button type="button" class="btn btn-text-color" data-dismiss="modal">否</button>
                     <button type="button" class="btn btn-primary">是</button>
                 </div>
             </div>
